-
Bug
-
Resolution: Done
-
P1: Critical
-
5.2.0 Alpha
-
None
The documentation doesn't state how a default constructed address parameter affects the OBEX transfer.
Alternatively it should be investigated whether default construction makes sense. Shouldn't the transfer always have a valid address?
Investigate error behavior if address is invalid or not available.
- is required for
-
QTBUG-33305 Issues to be fixed before Qt5.2 Beta1 release
-
- Closed
-
| For Gerrit Dashboard: QTBUG-33801 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 67759,3 | Improve handling of invalid Bt address by QBluetoothTransferManager | stable | qt/qtconnectivity | Status: MERGED | +2 | 0 |