Improve handling of invalid Bt address by QBluetoothTransferManager

Some minor unit test improvements

Task-number: QTBUG-33801
Change-Id: Idc98bf8928ced0f9e01b24668edf7c32172d2fd1
Reviewed-by: Fabian Bumberger <fbumberger@rim.com>
Reviewed-by: Alex Blasche <alexander.blasche@digia.com>