src/bluetooth/qbluetoothtransferreply_qnx.cpp
@@ -1,6 +1,7 @@
 /***************************************************************************
 **
 ** Copyright (C) 2013 Research In Motion
+** Copyright (C) 2013 Digia Plc and/or its subsidiary(-ies).
 ** Contact: http://www.qt-project.org/legal
 **
 ** This file is part of the QtBluetooth module of the Qt Toolkit.
@@ -113,8 +114,16 @@ bool QBluetoothTransferReplyQnx::start()
 
     } else {
         if (!file->exists()) {
-            m_errorStr = tr("File does not exist");
+            m_errorStr = QBluetoothTransferReply::tr("File does not exist");
             m_error = QBluetoothTransferReply::FileNotFoundError;
+            m_finished = true;
+            m_running = false;
+            QMetaObject::invokeMethod(this, "finished", Qt::QueuedConnection, Q_ARG(QBluetoothTransferReply*, this));
+            return false;
+        }
+        if (request().address().isNull()) {
+            m_errorStr = QBluetoothTransferReply::tr("Invalid target address");
+            m_error = QBluetoothTransferReply::HostNotFoundError;
             m_finished = true;
             m_running = false;
             QMetaObject::invokeMethod(this, "finished", Qt::QueuedConnection, Q_ARG(QBluetoothTransferReply*, this));
